; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/ggate/shared/extr_ggate.c_g_gate_ioctl.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/ggate/shared/extr_ggate.c_g_gate_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_gate_devfd = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"%s: ioctl(/dev/%s): %s.\00", align 1
@G_GATE_CTL_NAME = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @g_gate_ioctl(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* @g_gate_devfd, align 4
  %6 = load i64, i64* %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @ioctl(i32 %5, i64 %6, i8* %7)
  %9 = icmp eq i32 %8, -1
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = call i32 (...) @getprogname()
  %12 = load i32, i32* @G_GATE_CTL_NAME, align 4
  %13 = load i32, i32* @errno, align 4
  %14 = call i32 @strerror(i32 %13)
  %15 = call i32 @g_gate_xlog(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %12, i32 %14)
  br label %16

16:                                               ; preds = %10, %2
  ret void
}

declare dso_local i32 @ioctl(i32, i64, i8*) #1

declare dso_local i32 @g_gate_xlog(i8*, i32, i32, i32) #1

declare dso_local i32 @getprogname(...) #1

declare dso_local i32 @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
